@@ -344,6 +344,15 @@ public class DataComparisonBirtChart extends GenericBirtChart implements DataCom
 		return parameters.size() - 1;
 	}
 
+   /* (non-Javadoc)
+    * @see org.netxms.ui.eclipse.charts.api.DataComparisonChart#removeAllParameters()
+    */
+   @Override
+   public void removeAllParameters()
+   {
+      parameters.clear();
+   }
+	
 	/* (non-Javadoc)
 	 * @see org.netxms.ui.eclipse.charts.api.DataComparisonChart#updateParameter(int, double, boolean)
 	 */
