@@ -8,6 +8,7 @@
 - Network device database (allows some device specific information to be provided without drivers)
 - Management console:
 	- Node's zone name shown in alarm browser and object overview when zoning is enabled
+	- Sorting option in table based charts on dashboards (to implement "Top N" style charts)
 - Fixed issues: NX-1222, NX-1239, NX-1242
 
 
